# cis194-spring-13

./: .travis.yml  README.md
01-intro/: cis194-w01.cabal
01-intro/src/: Exercise1.hs  Exercise2.hs  HanoiDisplay.hs  Homework1.hs
01-intro/test/: Spec.hs
02-adt/: README.md  cis194-w02.cabal
02-adt/src/: Log.hs  LogAnalysis.hs
03-rec-poly/: cis194-w03.cabal
03-rec-poly/src/: Golf.hs
03-rec-poly/test/: Spec.hs
04-higher-order/: cis194-w04.cabal
04-higher-order/src/: Exercise1.hs  Exercise2.hs  Exercise3.hs  Exercise4.hs  Homework1.hs  Homework2.hs  Homework3.hs  Homework4.hs  Lecture.hs
04-higher-order/test/: Spec.hs
05-type-classes/: cis194-w05.cabal  stack.yaml
05-type-classes/src/: Calc.hs  Exercise1.hs  Exercise2.hs  Exercise3.hs  Exercise4.hs  Exercise5.hs  Exercise6.hs  ExprT.hs  Parser.hs  StackVM.hs
05-type-classes/test/: Spec.hs
06-laziness/: README.md  cis194-w06.cabal  stack.yaml
06-laziness/src/: Exercise1.hs  Exercise2.hs  Exercise3.hs  Exercise4.hs  Exercise5.hs  Exercise6.hs  Exercise7.hs
06-laziness/test/: Spec.hs
07-folds-monoids/: cis194-w07.cabal  stack.yaml
07-folds-monoids/app/: Main.hs
07-folds-monoids/src/: Editor.hs  Exercise1.hs  Exercise2.hs  Exercise3.hs  Exercise4.hs  JoinList.hs  RunJoinListEditor.hs  RunStringEditor.hs  StringBuffer.hs
07-folds-monoids/test/: Spec.hs
08-io/: README.md  cis194-w08.cabal  stack.yaml
08-io/app/: Main.hs
08-io/src/: Exercise1.hs  Exercise2.hs  Exercise3.hs  Exercise4.hs  Exercise5.hs
08-io/test/: Spec.hs
w01/: cis194-w01.cabal  stack.yaml
w01/src/: Homework2.hs
w02/: cis194-w02.cabal  stack.yaml
w02/src/: LogAnalysis.hs
w02/test/: Spec.hs
w03/: stack.yaml
w03/src/: Golf.hs
w03/test/: Spec.hs
