name:                cis194-w07
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/danielholmes/cis194-spring-13
license:             BSD3
license-file:        LICENSE
author:              Daniel Holmes
maintainer:          daniel@danielholmes.org
copyright:           2017 Daniel Holmes
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Buffer
                     , Editor
                     , Sized
                     , StringBuffer
                     , JoinList
                     , Exercise1
                     , Exercise2
                     , Exercise3
                     , Exercise4
                     , RunStringEditor
                     , RunJoinListEditor
  build-depends:       base >= 4.7 && < 5
                     , mtl >= 2.2.1
  default-language:    Haskell2010

executable main
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , cis194-w07
  default-language:    Haskell2010

test-suite cis194-w07-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , cis194-w07
                     , hspec >= 2.4.3 && < 3
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/cis194-w07
